--- a/book.toml
+++ b/book.toml
@@ -21,9 +21,9 @@ debounce = 1000
 
 # Comment out or remove the [output.pdf] section during development
 # Uncomment when you want to generate PDF
-# [output.pdf]
-# enable = true
-# renderer = ["html", "pdf"]
+[output.pdf]
+enable = true
+renderer = ["html", "pdf"]
 # command = "mdbook-pdf"
 margin-left = 1.5
 margin-right = 1.5
